fixed width of modal on mobile

--- a/client/src/app/about/team/page.module.css
+++ b/client/src/app/about/team/page.module.css
@@ -2,11 +2,7 @@
   padding: 0rem 3rem;
 }
 
-.listItemImage {
-  transition: "all .2s";
-}
-
-.listItemImage:hover {
+.listItem:hover {
   cursor: pointer;
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
@@ -42,4 +38,10 @@
 }
 .linkedInIcon {
   fill: #0077b5;
+}
+
+@media only screen and (max-width: 500px) {
+  .modal {
+    width: 80%;
+  }
 }
